--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,13 @@ logger.file.path=/var/log/simplybrewing
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url = jdbc:mysql://localhost:3306/ngx_tmp_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+
 spring.main.allow-bean-definition-overriding=true
 # Username and password
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=mysql
