log path to env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ application_version=@project.version@
 # LOG
 # ===============================
 logger.level=DEBUG
-logger.file.path=/var/log/simplybrewing
+logger.file.path=${LOG_PATH}
 
 # ===============================
 # Database
